1. Метод .of [#401362]