@@ -2,7 +2,6 @@ package ru.job4j.collection;
 
 import org.junit.Test;
 
-import java.util.Arrays;
 import java.util.List;
 
 import static org.hamcrest.Matchers.is;
@@ -11,24 +10,24 @@ import static org.junit.Assert.assertThat;
 public class DepartmentsTest {
     @Test
     public void whenMissed() {
-        List<String> input = Arrays.asList("k1/sk1");
-        List<String> expect = Arrays.asList("k1", "k1/sk1");
+        List<String> input = List.of("k1/sk1");
+        List<String> expect = List.of("k1", "k1/sk1");
         List<String> result = Departments.fillGaps(input);
         assertThat(result, is(expect));
     }
 
     @Test
     public void whenNonChange() {
-        List<String> input = Arrays.asList("k1", "k1/sk1");
-        List<String> expect = Arrays.asList("k1", "k1/sk1");
+        List<String> input = List.of("k1", "k1/sk1");
+        List<String> expect = List.of("k1", "k1/sk1");
         List<String> result = Departments.fillGaps(input);
         assertThat(result, is(expect));
     }
 
     @Test
     public void whenNaturalOrder() {
-        List<String> input = Arrays.asList("K2/SK1/SSK1", "K2/SK1/SSK2", "K1/SK2", "K1/SK1/SSK1", "K1/SK1/SSK2");
-        List<String> expect = Arrays.asList(
+        List<String> input = List.of("K2/SK1/SSK1", "K2/SK1/SSK2", "K1/SK2", "K1/SK1/SSK1", "K1/SK1/SSK2");
+        List<String> expect = List.of(
                 "K1",
                 "K1/SK1",
                 "K1/SK1/SSK1",
@@ -45,8 +44,8 @@ public class DepartmentsTest {
 
     @Test
     public void whenSpecialOrder() {
-        List<String> input = Arrays.asList("K2/SK1/SSK1", "K2/SK1/SSK2", "K1/SK2", "K1/SK1/SSK1", "K1/SK1/SSK2");
-        List<String> expect = Arrays.asList(
+        List<String> input = List.of("K2/SK1/SSK1", "K2/SK1/SSK2", "K1/SK2", "K1/SK1/SSK1", "K1/SK1/SSK2");
+        List<String> expect = List.of(
                 "K2",
                 "K2/SK1",
                 "K2/SK1/SSK1",
